--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@capacitor-community/fcm": "^1.0.8",
+    "@capacitor/android": "^2.4.4",
     "@capacitor/core": "2.4.4",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/fcm": "^5.30.0",
+    "@ionic-native/onesignal": "^5.30.0",
+    "@ionic-native/push": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "firebase": "^8.1.2",
+    "jetifier": "^1.6.6",
+    "onesignal-cordova-plugin": "^2.11.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
