--- a/package.json
+++ b/package.json
@@ -13,53 +13,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~10.0.0",
-    "@angular/core": "~10.0.0",
+    "@angular/common": "^11.0.5",
+    "@angular/core": "^11.0.5",
     "@angular/fire": "^6.1.4",
-    "@angular/forms": "~10.0.0",
-    "@angular/platform-browser": "~10.0.0",
-    "@angular/platform-browser-dynamic": "~10.0.0",
-    "@angular/router": "~10.0.0",
+    "@angular/forms": "^11.0.5",
+    "@angular/platform-browser": "^11.0.5",
+    "@angular/platform-browser-dynamic": "^11.0.5",
+    "@angular/router": "^11.0.5",
     "@capacitor-community/fcm": "^1.0.8",
-    "@capacitor/android": "^2.4.4",
-    "@capacitor/core": "2.4.4",
+    "@capacitor/android": "^2.4.5",
+    "@capacitor/core": "^2.4.5",
+    "@fortawesome/angular-fontawesome": "^0.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/fcm": "^5.30.0",
     "@ionic-native/onesignal": "^5.30.0",
     "@ionic-native/push": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
-    "firebase": "^8.1.2",
+    "@ionic/angular": "^5.5.2",
+    "chart.js": "^2.9.4",
+    "firebase": "^8.2.1",
+    "hammerjs": "^2.0.8",
     "jetifier": "^1.6.6",
+    "ng2-charts": "^2.4.2",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "onesignal-cordova-plugin": "^2.11.2",
-    "rxjs": "~6.5.5",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "^0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.0",
-    "@angular/language-service": "~10.0.0",
-    "@capacitor/cli": "2.4.4",
-    "@ionic/angular-toolkit": "^2.3.0",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^0.1100.5",
+    "@angular/cli": "^11.0.5",
+    "@angular/compiler": "^11.0.5",
+    "@angular/compiler-cli": "^11.0.5",
+    "@angular/language-service": "^11.0.5",
+    "@capacitor/cli": "^2.4.5",
+    "@ionic/angular-toolkit": "^3.0.0",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^14.14.17",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "^9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "^4.0.5"
   },
   "description": "An Ionic project"
 }
