--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/pwa-elements": "^3.0.2",
     "chart.js": "^2.9.4",
     "firebase": "^8.2.1",
     "hammerjs": "^2.0.8",
@@ -53,6 +54,7 @@
     "@angular/language-service": "^11.0.5",
     "@capacitor/cli": "^2.4.5",
     "@ionic/angular-toolkit": "^3.0.0",
+    "@ionic/lab": "3.2.10",
     "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.14.17",
