--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@ionic-native/push": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/stripe": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
     "chart.js": "^2.9.4",
+    "cordova-plugin-stripe": "^1.5.3",
     "firebase": "^8.2.1",
     "hammerjs": "^2.0.8",
     "jetifier": "^1.6.6",
