--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "@angular/platform-browser": "^11.0.5",
     "@angular/platform-browser-dynamic": "^11.0.5",
     "@angular/router": "^11.0.5",
-    "@capacitor-community/fcm": "^1.0.8",
     "@capacitor/android": "^2.4.5",
     "@capacitor/core": "^2.4.5",
+    "@capacitor/ios": "^2.4.5",
     "@fortawesome/angular-fontawesome": "^0.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/fcm": "^5.30.0",
-    "@ionic-native/onesignal": "^5.30.0",
     "@ionic-native/push": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -36,14 +35,12 @@
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
     "chart.js": "^2.9.4",
-    "cordova-plugin-stripe": "^1.5.3",
     "firebase": "^8.2.1",
     "hammerjs": "^2.0.8",
     "jetifier": "^1.6.6",
     "ng2-charts": "^2.4.2",
     "ng2-search-filter": "^0.5.1",
     "ngx-google-places-autocomplete": "^2.0.5",
-    "onesignal-cordova-plugin": "^2.11.2",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.11.3"
